force-app/main/default/objects/Sales_Order__c/Sales_Order__c.object-meta.xml
<CustomObject>
    <label>Sales_Order</label>
    <nameField>
        <label>Sales_Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales_Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>