force-app/main/default/objects/Sales_Order__c/fields/Customer_id__c.field-meta.xml
<CustomField>
    <fullName>Customer_id__c</fullName>
    <label>Customer_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>