force-app/main/default/objects/Sales_Order__c/fields/STORE_N__c.field-meta.xml
<CustomField>
    <fullName>STORE_N__c</fullName>
    <label>STORE_CITY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>