force-app/main/default/objects/Sales_Order__c/fields/Total_amount__c.field-meta.xml
<CustomField>
    <fullName>Total_amount__c</fullName>
    <label>Total_amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>